[tool.poetry]
name = "chat-service"
version = "0.1.0"
description = ""
authors = ["saamo24 <sabrahamyan.004@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.1"
strawberry-graphql = {extras = ["fastapi"], version = "^0.217.0"}
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
fastapi = "^0.108.0"
sqlalchemy = "^2.0.23"
aiomysql = "^0.0.21"
alembic = "^1.13.0"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
